yoshimi 1.7.0 M

2020-4-8 Will
* Corrected Part panning range.
  Didn't quite reduce extreme left to zero.

2020-4-7 Will
* Corrected direction of Pan Law Boost.

2020-4-6 Will
* Added presets broweser to remembered positions.
* Disabled aftercouch emulation.
* Added Stefaan to Yoshimi_Helpers.

2020-4-2 Will
* More refimentments to the text messaging and actions.
  Not yet available to the CLI.
* Added Volume to channel aftertouch.

2020-4-2 Will
* BugFix: MIDI-learn initialsing killing GUI startup warnings.
* Imroved first time startup messages and bank actions.

2020-3-31 Will
* fftw3.h now only included in DSP/FFTwrapper.h
  All other uses refer back to this.
* Fixed sample step size now only calculated in one place.
  Previously done in many places requiring two indirect
  fetches and a division. Now just one indirect fetch.
* sent_all_buffersize_f renamed to fixed_buffersize_f
  The previous name was confusingly incorrect.
* Applied similar optimisations to oscllator code.

2020-3-30 Will
* Completed transfers to improved GUI windowing.
  Some tidying yet to do.

2020-3-29 Will
* Fixed regresssion. Loading MIDIlearn not displaying.
* MIDIlearn and Vector added to improved GUI windowing.
* Mixer, Banks, VertKeyb added to improved GUI windowing.
* Console, Scales added to improved GUI windowing.
* ADnote, PADnote, Subnote added to improved GUI windowing.

2020-3-28 Will
* Merged in panning law control.
* Added 'Yet Another Flute" to 'Companion' bank.
* Temporarily disabled hiding engine type colours.
  Related code will be removed later if no objections.
* Unified GUI numbering of config window files.
* First trial of improved GUI window positioning.
  Only controller windows so far.
* Create GUI window directory!
* Moved panning law from config to patch sets.

2020-3-26 Will
* Aftertouch fully MIDI-learnable.
  Also blocks normal control action by default.
* AT GUI follows standard right button close practice.
* Updated docs.

2020-3-22 Will